--- a/index.html
+++ b/index.html
@@ -138,81 +138,32 @@ position: relative;
 top: -200px;
 	    }
 	    
- #socialicons
-{
-width:75%;
-margin:0 auto;
-overflow:auto;
+ b {
+    text-decoration:none;
 }
-  
-.socialicon
-{
-width:100px;
-height:100px;
-border-radius:50%;
-overflow:hidden;
-background:#e4e4e4;
-position:relative;
-float:left;
-margin:0px 0px 10px 10px ;
-} 
-
-.socialiconcircle1
-{
-width:150px;
-height:150px;
-position:absolute;
-left:0px;
-top:100px;
--webkit-animation:fill 2s infinite;
--moz-animation:fill 2s infinite;
-animation:fill 2s infinite;
+b svg rect {
+    stroke: #eeeeee;
+    stroke-width: 4;
+    fill: #eeeeee;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
-
-.socialiconcircle2
-{
-width:94px;
-height:94px;
-border-radius:50%;
-background:#fff;
-position:absolute;
-left:3px;
-top:3px;
+b svg path {
+    fill: #000000;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
-
-.icons
-{
-font-size:2em;
-position:absolute;
-left: 33px;
-top: 33px;
--webkit-animation:iconjump 2s infinite;
--moz-animation:iconjump 2s infinite;
-animation:iconjump 2s infinite;  
+b:hover svg rect {
+    stroke-width: 50;
+    stroke: #710000;
 }
-
-/* fill color */  
-.dribbblecolor{background:#ea4c89;}
-.facebookcolor{background:#3b5998;} 
-.googlecolor{background:#dd4b39;} 
-.flickrcolor{background:#ff0084;}
-.pinterestcolor{background:#c8232c;}
-.youtubecolor{background:#c4302b;}
-.githubcolor{background:#171515;}
-.linkedincolor{background:#0e76a8;}
-.tumblrcolor{background:#34526f;}
-
-/* icons color */  
-.dribbble{color:#ea4c89!important}
-.facebook{color:#3b5998!important}
-.google{color:#dd4b39!important}                                   
-.flickr{color:#ff0084!important}
-.pinterest{color:#c8232c!important;}
-.youtube{color:#c4302b!important;}  
-.github{color:#171515!important;}  
-.linkedin{color:#0e76a8!important;} 
-.tumblr{color:#34526f!important;}
-
+b:hover svg path {
+    fill: #ffffff;
+}
 
 
 .center {
@@ -500,62 +451,18 @@ a:active {text-decoration:underline;}
 		    </div>
 	    </div>
     <div class="grid-container">
-    <div id="socialicons">
-<div class="socialicon">
-<div class="dribbblecolor socialiconcircle1"></div>
-<div class="socialiconcircle2">
-<i class="fa icons fa-dribbble dribbble"></i>
-</div> 
-</div>
-<div class="socialicon">
-<div class="facebookcolor socialiconcircle1"></div>
-<div class="socialiconcircle2">
-<i class="fa icons fa-facebook-square facebook"></i>
-</div> 
-</div>
-<div class="socialicon">
-<div class="googlecolor socialiconcircle1"></div>
-<div class="socialiconcircle2">
-<i class="fa icons fa-google-plus-square google"></i>
-</div> 
-</div>
-<div class="socialicon">
-<div class="flickrcolor socialiconcircle1"></div>
-<div class="socialiconcircle2">
-<i class="fa icons fa-flickr flickr"></i>
-</div> 
-</div>                  
-<div class="socialicon">
-<div class="pinterestcolor socialiconcircle1"></div>
-<div class="socialiconcircle2">
-<i class="fa icons fa-pinterest-square pinterest"></i>
-</div> 
-</div>
-<div class="socialicon">
-<div class="githubcolor socialiconcircle1"></div>
-<div class="socialiconcircle2">
-<i class="fa icons fa-github-alt github"></i>
-</div> 
-</div> 
-<div class="socialicon">
-<div class="linkedincolor socialiconcircle1"></div>
-<div class="socialiconcircle2">
-<i class="fa icons fa-linkedin-square linkedin"></i>
-</div> 
-</div>
-<div class="socialicon">
-<div class="youtubecolor socialiconcircle1"></div>
-<div class="socialiconcircle2">
-<i class="fa icons fa-youtube-square youtube"></i>
-</div> 
-</div>
-<div class="socialicon">
-<div class="tumblrcolor socialiconcircle1"></div>
-<div class="socialiconcircle2">
-<i class="fa icons fa-tumblr-square tumblr"></i>
-</div> 
-</div>       
-</div>
+    
+      <b class="facebook" href="https://www.facebook.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60"><rect x="13" y="13" fill="#EEEEEE" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 73.0976 30.4134)" width="36" height="36"></rect><path fill="#000000" d="M31.8,40.3h-3.7v-10h-2.5v-3.4l2.5,0l0-2c0-2.8,0.8-4.5,4.1-4.5h2.8v3.4h-1.7c-1.3,0-1.4,0.5-1.4,1.4l0,1.7h3.1l-0.4,3.4l-2.7,0L31.8,40.3L31.8,40.3z"></path></svg></b>
+
+<b class="twitter" href="https://twitter.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60"><rect x="13" y="13" fill="#EEEEEE" transform="matrix(-0.7071 0.7071 -0.7071 -0.7071 73.0976 30.4134)" width="36" height="36"></rect><path fill="#000000" d="M41.076,23.131c-0.814,0.36-1.691,0.605-2.611,0.715c0.938-0.562,1.658-1.453,1.998-2.514c-0.877,0.521-1.852,0.899-2.885,1.103C36.75,21.552,35.566,21,34.26,21c-2.508,0-4.543,2.034-4.543,4.544c0,0.357,0.039,0.703,0.117,1.035c-3.777-0.189-7.125-1.999-9.367-4.747c-0.391,0.67-0.615,1.45-0.615,2.284c0,1.576,0.803,2.968,2.021,3.783c-0.744-0.024-1.443-0.229-2.057-0.569c-0.002,0.019-0.002,0.039-0.002,0.058c0,2.202,1.566,4.038,3.645,4.456c-0.381,0.104-0.783,0.16-1.197,0.16c-0.293,0-0.576-0.028-0.855-0.083c0.58,1.805,2.258,3.119,4.246,3.156c-1.557,1.219-3.516,1.945-5.643,1.945c-0.369,0-0.73-0.022-1.086-0.063c2.012,1.289,4.4,2.041,6.967,2.041c8.357,0,12.93-6.925,12.93-12.931c0-0.197-0.004-0.393-0.014-0.587C39.695,24.841,40.465,24.041,41.076,23.131L41.076,23.131z"></path></svg></b>
+
+<b class="youtube" href="https://youtube.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="60" height="60"><rect x="12" y="12" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -12.4264 30)" fill="#EEEEEE" width="36" height="36"/><path d="M34.3,30l-7.2,4.2v-8.5L34.3,30z M41,33.9v-7.9c0,0,0-3.8-3.8-3.8H22.8c0,0-3.8,0-3.8,3.8v7.9c0,0,0,3.8,3.8,3.8h14.4C37.2,37.7,41,37.7,41,33.9"/></svg></b>
+
+<b class="instagram" href="http://instagram.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="60" height="60"><rect x="12" y="12" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -12.4264 30)" fill="#EEEEEE" width="36" height="36"/><path d="M36.5,19.3H23.5c-2.3,0-4.1,1.8-4.1,4.1v4.4v8.7c0,2.3,1.9,4.1,4.1,4.1h13.1c2.3,0,4.1-1.8,4.1-4.1v-8.7v-4.4C40.7,21.2,38.8,19.3,36.5,19.3z M37.7,21.8l0.5,0v0.5v3.1l-3.6,0l0-3.6L37.7,21.8z M27,27.8c0.7-0.9,1.8-1.6,3-1.6s2.4,0.6,3,1.6c0.4,0.6,0.7,1.4,0.7,2.2c0,2.1-1.7,3.8-3.8,3.8s-3.8-1.7-3.8-3.8C26.2,29.2,26.5,28.4,27,27.8z M38.6,36.5c0,1.1-0.9,2-2,2H23.5c-1.1,0-2-0.9-2-2v-8.7h3.2c-0.3,0.7-0.4,1.4-0.4,2.2c0,3.2,2.6,5.8,5.8,5.8c3.2,0,5.8-2.6,5.8-5.8c0-0.8-0.2-1.5-0.4-2.2h3.2V36.5z"/></svg></b>
+<b class="tumblr" href="https://www.tumblr.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="-43 0 60 60" width="60" height="60"><rect x="-18" y="-18" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -12.4264 30)" fill="#EEEEEE" width="36" height="36"/><path fill="#B03460" d="M-12.1,21v5h4.7v3.1h-4.7v5.1c0,1.2,0.1,1.9,0.2,2.2c0.1,0.3,0.3,0.6,0.7,0.8c0.4,0.3,0.9,0.4,1.5,0.4
+	c1,0,2-0.3,3-1v3.2c-0.9,0.4-1.6,0.7-2.3,0.8c-0.7,0.2-1.4,0.2-2.2,0.2c-0.9,0-1.7-0.1-2.4-0.3c-0.7-0.2-1.3-0.6-1.8-1
+	c-0.5-0.4-0.8-0.9-1-1.4c-0.2-0.5-0.3-1.2-0.3-2.1v-7H-19v-2.8c0.8-0.3,1.5-0.6,2-1.1c0.6-0.5,1-1,1.3-1.7c0.3-0.7,0.6-1.5,0.7-2.5
+	H-12.1z"/></svg></b>
 	    </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
