--- a/index.html
+++ b/index.html
@@ -159,20 +159,13 @@ height: 100vh;
   box-sizing: border-box;
   list-style-type: none;
 }
-
-#content {
-  width: 100%;
-  padding:15px;
-  margin: 0 auto;
-  text-align: center;
-}
-.recipe {
+recipe {
   background:#f1f1f1;
   max-width:300px;
- height: 300px;
+  height:300px;
   position:relative;
-  overflow:hidden;
   display:inline-block;
+  overflow:hidden;
   cursor: pointer;
   margin:0 10px 10px 0;
   -webkit-border-radius:0 0 7px 7px;
@@ -196,6 +189,37 @@ height: 100vh;
   -ms-transform: scale(1.2) rotate(-3deg); /* IE 9 */
   -webkit-transform: scale(1.2) rotate(-3deg); /* Safari and Chrome */
 }
+.fa-heart-o:hover {
+  animation-name: pulse; 
+  animation-duration: 0.5s; 
+  animation-iteration-count: infinite; 
+  -webkit-animation-name: pulse; 
+  -webkit-animation-duration: 0.5s; 
+  -webkit-animation-iteration-count: infinite; 
+}
+.likes {
+  width:45px;
+  height:35px;
+  background:#EC4678;
+  opacity: 0.85;
+  filter: alpha(opacity=85); /* IE8 and lower */
+  zoom: 1; /* set "zoom", "width" or "height" to trigger "hasLayout" in IE 7 and lower */
+  font-size:1em;
+  color:white;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 35px; 
+  position:absolute;
+  left:0;
+  top:20px;
+  -webkit-border-radius:0 5px 5px 0px;
+  border-radius:0 5px 5px 0px;
+  -webkit-box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+  -moz-box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+  text-shadow: 1px 1px 2px rgba(214, 22, 80, 1);
+  border-left:5px dotted #D61650;
+}
 .name {
   width:100%;
   height:50px;
@@ -212,7 +236,7 @@ height: 100vh;
   text-shadow: 1px 1px 2px rgba(51, 145, 135, 1);
   border-bottom:1px dotted #339187;
 }
-	.media {
+.media {
   width:100%;
   font-size:0.7em;
   color:#777;
@@ -223,19 +247,32 @@ height: 100vh;
 }
 .media li {
   display:inline-block;
-	height:100px;
   padding:0 7px;
 }
 footer {
   font-size:0.7em;
   color: #339187;
-  margin:50px 0 0 0;
+  margin:15px 0 0 0;
 }
 a:link, a:visited {color: #339187; text-decoration:none;font-weight:700;}
 a:hover {color: #D61650;text-decoration:none;}
 a:active {text-decoration:underline;}
-  
-	 
+
+/* Pulse Animation for Firefox, Opera and Internet Explorer 10 */
+@keyframes pulse {
+  from {
+    transform: scale(1.0);
+    opacity: 1.0;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 1.0;
+  }
+  to { 
+    transform: scale(1.0);
+    opacity: 1.0;
+  }
+}
 /* Pulse Animation for Google Chrome and Safari */
 @-webkit-keyframes pulse {
   from {
@@ -251,6 +288,13 @@ a:active {text-decoration:underline;}
     opacity: 1.0;
   }
 }
+#content {
+  width: 100%;
+  padding:15px;
+  margin: 0 auto;
+  text-align: center;
+}
+
 .icon {
 position: relative;
 top: -20vh;
